[package]
name = "mempoolspace"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Enable socks proxy
socks = ["reqwest/socks"]

[dependencies]
bitcoin = { version = "0.32", default-features = false, features = ["std", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.5"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.46", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "mempool"
