[package]
name = "mempoolspace"
version = "0.2.0"
edition = "2024"
description = "A Rust client library for interacting with the Mempool Space APIs."
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
homepage = "https://github.com/shadowylab/mempool"
repository = "https://github.com/shadowylab/mempool.git"
license = "MIT"
readme = "README.md"
keywords = ["bitcoin", "mempool"]

[features]
# Default features
default = ["rustls"]
# Enable rust TLS
rustls = ["reqwest/rustls-tls"]
# Enable natile TLS (openssl)
nativetls = ["reqwest/native-tls"]
# Enable socks proxy
socks = ["reqwest/socks"]

[dependencies]
bitcoin = { version = "0.32", default-features = false, features = ["std", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.5"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.46", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "mempool"
